oke/cert-manager/nginx-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/library/nginx:alpine
          ports:
            - containerPort: 443
          volumeMounts:
          # 作成したシークレットをファイルとしてマウント
            - name: certs-volume
              mountPath: /etc/nginx/tls
              readOnly: true
          # 設定ファイルを上書きマウント
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: certs-volume
          secret:
            secretName: my-test-secret-tls
        - name: nginx-conf
          configMap:
            name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
spec:
  selector:
    app: my-nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
